fix: [UPDATE] Addressed SonarQube issues with project